[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/ActiveIngredientsPanel/ActiveIngredientsPanel_TowerNumberIndicator.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/ActiveIngredientsPanel/ActiveIngredientsPanel_Header.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerIngredientIcons/MultiIngredientPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/ActiveIngredientsPanel/ActiveIngredientsPanel.gd" type="Script" id=5]
[ext_resource path="res://MiscRelated/TextInterpreterRelated/OtherFragmentIcons/FragmentIcon_Ingredient.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="ActiveIngredientsPanel" type="MarginContainer"]
margin_right = 38.0
margin_bottom = 25.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 100.0
margin_bottom = 42.0
mouse_filter = 2
custom_constants/separation = 0

[node name="HeaderWholeMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 12.0
mouse_filter = 2

[node name="HeaderMarginer" type="MarginContainer" parent="VBoxContainer/HeaderWholeMarginer"]
margin_right = 70.0
margin_bottom = 12.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="Background" type="TextureRect" parent="VBoxContainer/HeaderWholeMarginer/HeaderMarginer"]
margin_right = 70.0
margin_bottom = 12.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/HeaderWholeMarginer/HeaderMarginer"]
margin_right = 70.0
margin_bottom = 12.0
mouse_filter = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HeaderWholeMarginer/HeaderMarginer/Marginer"]
margin_left = 6.0
margin_top = 2.0
margin_right = 67.0
margin_bottom = 12.0
size_flags_horizontal = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderWholeMarginer/HeaderMarginer/Marginer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 10.0
custom_constants/margin_top = 1

[node name="HeaderLabel" type="Label" parent="VBoxContainer/HeaderWholeMarginer/HeaderMarginer/Marginer/HBoxContainer/MarginContainer"]
margin_top = 1.0
margin_right = 48.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Absorbed Ing"
align = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HeaderWholeMarginer/HeaderMarginer/Marginer/HBoxContainer"]
margin_left = 52.0
margin_right = 61.0
margin_bottom = 9.0
size_flags_vertical = 6
texture = ExtResource( 6 )

[node name="TowerCountMarginer" type="MarginContainer" parent="VBoxContainer/HeaderWholeMarginer"]
margin_left = 76.0
margin_right = 100.0
margin_bottom = 12.0
mouse_filter = 2
size_flags_horizontal = 10

[node name="Background" type="TextureRect" parent="VBoxContainer/HeaderWholeMarginer/TowerCountMarginer"]
margin_right = 24.0
margin_bottom = 12.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/HeaderWholeMarginer/TowerCountMarginer"]
margin_right = 24.0
margin_bottom = 12.0
mouse_filter = 2
custom_constants/margin_right = 1
custom_constants/margin_top = 2
custom_constants/margin_left = 1

[node name="CountLabel" type="Label" parent="VBoxContainer/HeaderWholeMarginer/TowerCountMarginer/Marginer"]
margin_left = 1.0
margin_top = 2.0
margin_right = 23.0
margin_bottom = 11.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "12/12"
align = 1

[node name="MultiIngredientPanel" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 12.0
margin_right = 100.0
margin_bottom = 42.0
custom_constants/margin_top = 0
collapsed_value_by_default = true
